--- a/templates/root.html
+++ b/templates/root.html
@@ -1,6 +1,37 @@
-<form name="test" method="post" action="{{action_url}}">
-  <p>Database:<input type="text" name="{{database_name_field}}"></p>
-  <p>Query:<br>
-  <textarea name="{{query_text_field}}" cols="80" rows="25"></textarea><br>
-  <input type="submit" value="Execute!"></p>
-</form> 
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html lang="en">
+<head>
+    <title>MongoDbWebAdmin</title>
+</head>
+<body>
+	<table>
+		<tr>
+			<td align="right">
+				Database:
+			</td>
+			<td>
+				<select name="database_name" form="query">
+					{% for database_name in database_names %}
+						<option value="{{ database_name }}">{{ database_name }}</option>
+					{% endfor %}
+				</select>
+			</td>
+		</tr>
+		<tr>
+			<td align="right">
+				Query:
+			</td>
+			<td>
+				<textarea name="query_text" cols="80" rows="25" form="query"></textarea>
+			</td>
+		</tr>
+		<tr>
+			<td></td>
+			<td align="right">
+				<input type="submit" form="query" value="Execute">
+			</td>
+		</tr>
+	</table>
+	<form id="query" method="post" action="{{ submit_target }}"></form> 
+</body>
+</html>
