--- a/templates/root.html
+++ b/templates/root.html
@@ -1,5 +1,8 @@
 {% for database_name in database_names %}
-    <div class="indented database rollable" status="unloaded">
+    <div class="database rollable indented" status="unloaded">
+        <span class="controls presistent">
+            <span class="delete"></span>
+        </span>
         <span class="name presistent">{{ database_name }}</span>
         <span class="toggler"></span>
         <span class="content-placeholder">
