Added ability to edit values and refactored to use jQuery template delegation instead of manual event binding.

--- a/static/styles.css
+++ b/static/styles.css
@@ -36,6 +36,10 @@
     display: none;
 }
 
+
+
+
+
 .controls
 {
     float: right;
@@ -46,3 +50,7 @@
     content: '✖';
 }
 
+.controls > .append::after
+{
+    content: '+';
+}
