--- a/templates/root.html
+++ b/templates/root.html
@@ -1,6 +1,7 @@
 {% for database_name in database_names %}
     <div class="database rollable indented" status="unloaded">
         <span class="controls presistent">
+            <span class="append"></span>
             <span class="delete"></span>
         </span>
         <span class="name presistent">{{ database_name }}</span>
