--- a/templates/collection.html
+++ b/templates/collection.html
@@ -1,6 +1,7 @@
 {% for document_id in document_ids %}
     <div class="document deletable rollable indented" status="unloaded">
         <span class="controls presistent">
+            <span class="append"></span>
             <span class="delete"></span>
         </span>
         <span class="id presistent">{{ document_id }}</span>
