--- a/templates/database.html
+++ b/templates/database.html
@@ -1,6 +1,7 @@
 {% for collection_name in collection_names %}
     <div class="collection rollable indented" status="unloaded">
         <span class="controls presistent">
+            <span class="append"></span>
             <span class="delete"></span>
         </span>
         <span class="name presistent">{{ collection_name }}</span>
