--- a/templates/document.html
+++ b/templates/document.html
@@ -1,14 +1,20 @@
 {% macro render_object(object) %}
     {% if object is none %}    
-        <span>null</span>
-    {% elif object is sameas false %}
-        <span>false</span>
-    {% elif object is sameas true %}
-        <span>true</span>
+        <span class="editable">
+            {{ render_primitive(object) }}
+        </span>
+    {% elif object is sameas false or object is sameas true %}
+        <span class="editable">
+            {{ render_primitive(object) }}
+        </span>
     {% elif object is number %}    
-        <span>{{ object }}</span>
+        <span class="editable">
+            {{ render_primitive(object) }}
+        </span>
     {% elif object is string %}    
-        <span>{{ escape(object) }}</span>
+        <span class="editable">
+            {{ render_primitive(object) }}
+        </span>
     {% elif object is mapping %}
         <span class="rollable" status="unrolled">
             <span class="presistent">{</span>
@@ -16,6 +22,7 @@
             {% for key, value in object.items() %}
                 <div class="pair deletable indented">
                     <span class="controls presistent">
+                        <span class="append"></span>
                         <span class="delete"></span>
                     </span>
                     <span>{{ render_object(key) }}</span>
@@ -35,6 +42,7 @@
             {% for item in object %}
                 <div class="item deletable indented">
                     <span class="controls presistent">
+                        <span class="append"></span>
                         <span class="delete"></span>
                     </span>
                     {{ render_object(item) }}
