--- a/templates/root.html
+++ b/templates/root.html
@@ -1,9 +1,6 @@
 {% for database_name in database_names %}
-    <div class="database rollable indented" status="unloaded">
-        <span class="controls presistent">
-            <span class="append"></span>
-            <span class="delete"></span>
-        </span>
+    <div class="database deletable rollable indented" status="unloaded">
+        <span class="deleter presistent"></span>
         <span class="name presistent">{{ database_name }}</span>
         <span class="toggler"></span>
         <span class="content-placeholder">
