--- a/templates/database.html
+++ b/templates/database.html
@@ -1,8 +1,8 @@
 {% for collection_name in collection_names %}
     <div class="collection deletable rollable indented" status="unloaded">
-        <span class="deleter presistent"></span>
+        <span class="deleter presistent control"></span>
         <span class="name presistent">{{ collection_name }}</span>
-        <span class="toggler"></span>
+        <span class="toggler control"></span>
         <span class="content-placeholder">
             <!-- object -->
         </span>
