--- a/templates/root.html
+++ b/templates/root.html
@@ -1,8 +1,8 @@
 {% for database_name in database_names %}
     <div class="database deletable rollable indented" status="unloaded">
-        <span class="deleter presistent"></span>
+        <span class="deleter presistent control"></span>
         <span class="name presistent">{{ database_name }}</span>
-        <span class="toggler"></span>
+        <span class="toggler control"></span>
         <span class="content-placeholder">
             <!-- object -->
         </span>
