--- a/templates/collection.html
+++ b/templates/collection.html
@@ -1,9 +1,9 @@
 {% for document_id in document_ids %}
     <div class="document deletable rollable indented" status="unloaded">
-        <span class="deleter presistent"></span>
+        <span class="deleter presistent control"></span>
         <span class="id presistent">{{ document_id }}</span>
         <span class="presistent content-faker">{</span>
-        <span class="toggler content-faker"></span>
+        <span class="toggler control content-faker"></span>
         <span class="content-placeholder">
             <!-- object -->
         </span>
