--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html lang="en">
+<!DOCTYPE html>
+<html>
     <head>
+        <link rel="stylesheet" href="{{ url_for('static', filename='index-style.css') }}"></link>
+        <link rel="stylesheet" href="{{ url_for('static', filename='object-style.css') }}"></link>
+        <script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.js"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='index-script.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='object-script.js') }}"></script>
         <title>MongoDbWebAdmin</title>
-        <script src="//code.jquery.com/jquery-2.1.1.js"></script>
-        <script src="/static/scripts.js"></script>
-        <link type="text/css" rel="stylesheet" href="/static/styles.css"/>
     </head>
     <body>
-        <h1>Mongo db web admin</h1>
-        <div id="root">
-            <span class="content-placeholder">
-                <!-- databases -->
-            </span>
+        <h1>MongoDbWebAdmin</h1>
+        <div id="content">
+            <input type="text" id="server-address" value="localhost" placeholder="Server address..." class="generic">
+            <span id="connect" class="loading-button"></span>
         </div>
     </body>
 </html>
+
