Implemented document loading and improved error handling.

--- a/templates/collection-name-selector.html
+++ b/templates/collection-name-selector.html
@@ -11,7 +11,7 @@
     Selector: <span id="selector" >{{ render_object({}) }}</span>
 </div>
 <div  style="display: inline-block; vertical-align: top" class="generic">
-    Projector: <span id="projector">{{ render_object({}) }}</span>
+    Projector: <span id="projector">{{ render_object({'_id':false}) }}</span>
 </div>
 <span id="open-collection" class="loading-button"></span>
 
