--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,7 @@
     <body>
         <h1>MongoDbWebAdmin</h1>
         <div id="content">
-            <input type="text" id="server-address" value="localhost" placeholder="Server address..." class="generic">
-            <span id="connect" class="loading-button"></span>
+            {% include 'server.html' %}
         </div>
     </body>
 </html>
