Added some labels.

--- a/templates/documents.html
+++ b/templates/documents.html
@@ -1,6 +1,6 @@
 <div class="load-anchor nice-border">
     <div style="text-align:right">
-        <button id="new-document">New document</button>
+        <span style="float: left">Documents:</span><button id="new-document">New document</button>
     </div>
     <div id="new-document-anchor"></div>
     {% for document in documents %}
