--- a/templates/document.html
+++ b/templates/document.html
@@ -3,7 +3,7 @@
 {% macro render_document(document) %}
     <div class="nice-line"></div>
     <div class="document" document_id="{{ document['_id'] }}">
-        <div style="float:right">
+        <div class="document-controls" style="float:right">
             <span class="control document-updater"></span>
             <span class="control document-reloader"></span>
             <span class="control document-deleter"></span>
