--- a/templates/database.html
+++ b/templates/database.html
@@ -1,27 +1,27 @@
+{% from 'object.html' import render_object %}
 <div class="load-anchor nice-border" style="position: relative">
-    <datalist id="database-names">
-        {% for database_name in database_names %}
-            <option value="{{- database_name -}}">{{- database_name -}}</option>
+    <datalist id="collection-names">
+        {% for collection_name in collection_names %}
+            <option value="{{- collection_name -}}">{{- collection_name -}}</option>
         {% endfor%}        
     </datalist>
     <div style="display: inline-table">
         <div style="display: table-row">
             <div style="display: table-cell">
-                <div>Database:</div>
-                <input type="text" id="database-name" list="database-names">
+                <div>Collection:</div>
+                <input type="text" id="collection-name" list="collection-names">
             </div>
             <div style="display: table-cell">
-                <div>Username:</div>
-                <input type="text" id="login">
+                <div>Selector:</div>
+                <div class="nice-border" id="selector" >{{ render_object({}) }}</div>
             </div>
             <div style="display: table-cell">
-                <div>Password:</div>
-                <input type="password" id="password">
+                <div>Projector:</div>
+                <div class="nice-border" id="projector">{{ render_object({'_id':false}) }}</div>
             </div>
         </div>
     </div>
-    <button id="open-database" style="position: absolute; bottom: 2px; right: 2px">Open database</button>
+    <button id="open-collection" style="position: absolute; bottom: 2px; right: 2px">Open collection</button>
 </div>
-
 
 
