--- a/templates/server.html
+++ b/templates/server.html
@@ -1,9 +1,28 @@
 <div class="load-anchor nice-border" style="position: relative">
-    <div style="display: inline-block">
-        <div>Server address:</div>
-        <input type="text" id="server-address" value="localhost" placeholder="Server address...">
+    <datalist id="database-names">
+        {% for database_name in database_names %}
+            <option value="{{- database_name -}}">{{- database_name -}}</option>
+        {% endfor%}        
+    </datalist>
+    <div style="display: inline-table">
+        <div style="display: table-row">
+            <div style="display: table-cell">
+                <div>Database:</div>
+                <input type="text" id="database-name" list="database-names">
+            </div>
+            <div style="display: table-cell">
+                <div>Username:</div>
+                <input type="text" id="login">
+            </div>
+            <div style="display: table-cell">
+                <div>Password:</div>
+                <input type="password" id="password">
+            </div>
+        </div>
     </div>
-    <button id="connect" style="position: absolute; bottom: 2px; right: 2px">Connect</button>
+    <button id="open-database" style="position: absolute; bottom: 2px; right: 2px">Open database</button>
 </div>
+
+
 
 
