--- a/templates/database.html
+++ b/templates/database.html
@@ -12,15 +12,21 @@
             </div>
             <div style="display: table-cell">
                 <div>Username:</div>
-                <input type="text" id="login">
+                <input type="text" id="login" size="10">
             </div>
             <div style="display: table-cell">
                 <div>Password:</div>
-                <input type="password" id="password">
+                <input type="password" id="password" size="10">
+            </div>
+            <div style="display: table-cell">
+                <div id="database-stats"></div>
             </div>
         </div>
     </div>
-    <button id="open-database" style="position: absolute; bottom: 2px; right: 2px">Open database</button>
+    <div style="position: absolute; bottom: 2px; right: 2px">
+        <!-- <button id="run-command">Execute command</button> -->
+        <button id="open-database">Open database</button>
+    </div>
 </div>
 
 
