--- a/templates/documents.html
+++ b/templates/documents.html
@@ -1,9 +1,21 @@
-<div class="load-anchor nice-border">
-    <div style="text-align:right">
-        <span style="float: left">Documents:</span><button id="new-document">New document</button>
+{% from 'object.html' import render_object %}
+<div class="load-anchor nice-border" style="position: relative">
+    <div style="display: inline-table">
+        <div style="display: table-row">
+            <div style="display: table-cell">
+                <div class="nice-border">
+                    Selector: <span id="selector">{{ render_object({}) }}</span>
+                </div>
+            </div>
+            <div style="display: table-cell">
+                <div class="nice-border">
+                    Projector: <span id="projector">{{ render_object({'_id':false}) }}</span>
+                </div>
+            </div>
+        </div>
     </div>
-    <div id="new-document-anchor"></div>
-    {% for document in documents %}
-        {% include 'document.html' %}
-    {% endfor %}    
+    <div style="position: absolute; bottom: 2px; right: 2px">
+        <button id="find-documents">Find documents</button>
+        <button id="new-document">New document</button>
+    </div>
 </div>
