Added 'bytes' suffix to numbers representing size in statistics.

--- a/templates/database-stats.html
+++ b/templates/database-stats.html
@@ -7,7 +7,7 @@
         <div>Average document size: {{ database_stats.avgObjSize }} bytes</div>
         <div>Storage size: {{ database_stats.storageSize }} bytes</div>
         <div>Indexes: {{ database_stats.indexes }}</div>
-        <div>Total index size: {{ database_stats.indexSize }}</div>
-        <div>Database file size: {{ database_stats.fileSize }}</div>
+        <div>Total index size: {{ database_stats.indexSize }} bytes</div>
+        <div>Database file size: {{ database_stats.fileSize }} bytes</div>
     </div>
 </div>
