--- a/templates/database.html
+++ b/templates/database.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div style="position: absolute; bottom: 2px; right: 2px">
-        <!-- <button id="run-command">Execute command</button> -->
+        <button id="execute-command">Execute command</button>
         <button id="open-database">Open database</button>
     </div>
 </div>
